--- a/css/index.css
+++ b/css/index.css
@@ -6,11 +6,13 @@
     border: 0;
 }
 body{
-    background: #FFD00A;
+    background: linear-gradient( 90deg, #a1c4fd 0%, #c2e9fb 100%);
     font-family: 'Noto Sans JP', sans-serif;
+    height: 110%;
 }
 .center_bar{
-
+    margin-left: 50%;
+    transform: translateX(-50%);
 }
 .navbar{
     margin-top: 50vh;
@@ -62,7 +64,7 @@ body{
     position: absolute;
     margin-top: 0px;
     height: 100%;
-    transition: 2s; 
+    transition: .5s; 
     animation: insane 0.5s cubic-bezier(.5, 0, 0, 1);
 }
 @keyframes insane{
@@ -81,18 +83,37 @@ body{
   
 }
 .score > .table > p{
-    padding: 15px;
+    padding: 12px;
 }
 .remove_display{
-    transition: 0.2s;
-    animation: remove cubic-bezier(.5, 0, 0, 1);
-    transform: translateX(-30px);
     opacity: 0;
     display: inline-block;
+    transition: .5s;
+    animation: removing cubic-bezier(.5, 0, 0, 1);
+    transform: translateX(-30px);
     background: #fff;
     border-radius: 0px 14px 14px 0px;
     box-shadow: 0px 8px 24px 0px rgba(0,0,0,0.15);
     position: absolute;
     margin-top: 0px;
     height: 100%;
+    visibility: hidden;
+}
+
+/* Box little design */
+.table{
+    padding: 10px 25px;
+    margin-top: 25px;
+}
+.button{
+    margin-left: 15px;
+    margin-top: 10px;
+    padding: 10px 25px;
+    border-radius: 4px;
+    color: #fff;
+    font-size: 17px;
+    background-color: #016EED;
+    position: absolute;
+    margin-bottom: 0px;
+    box-shadow: 0px 8px 24px 0px rgba(0,0,0,0.15);
 }
